Fixed layout bugs with match.

--- a/client/app/matches/matches.component.scss
+++ b/client/app/matches/matches.component.scss
@@ -70,3 +70,8 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+.edit-match {
+  max-width: 75%;
+  margin: 10px;
+}
